test/types/range/unbounded/unboundedIter.execopts
--case=1  # unboundedIter.good
--case=2  # unboundedIter-2.good
--case=3  # unboundedIter-3.good
--case=4  # unboundedIter-4.good
--case=5  # unboundedIter-5.good
--case=6  # unboundedIter-6.good
